build: add CFGs and clang build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "dereferenceable",
         "extractvalue",
         "fastcc",
+        "Graphviz",
         "mustprogress",
         "musttail",
         "noalias",
