--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -118,38 +118,37 @@
 			]
 		},
 		{
-			"label": "remove unused temp files",
+			"label": "prepare temp files",
 			"type": "shell",
-			"command": "del",
-			"args": [
-				"${workspaceFolder}\\target\\release\\deps\\${workspaceFolderBasename}.${workspaceFolderBasename}.*"
-			],
-			"group": "none",
+			"command": "del ${workspaceFolder}\\target\\release\\deps\\${workspaceFolderBasename}.${workspaceFolderBasename}.*;xcopy ${workspaceFolder}\\target\\release\\deps\\${workspaceFolderBasename}.*.rcgu.o ${workspaceFolder}\\target\\release\\deps\\TEMP_FILE.${workspaceFolderBasename}.rcgu.o* /Y;del ${workspaceFolder}\\target\\release\\deps\\${workspaceFolderBasename}.*.rcgu.*",
 			"problemMatcher": [],
 			"hide": true
 		},
 		{
-			"label": "rename temp file",
+			"label": "clang: build analysis",
 			"type": "shell",
-			"command": "xcopy",
-			"args": [
-				"${workspaceFolder}\\target\\release\\deps\\${workspaceFolderBasename}.*.rcgu.o",
-				"${workspaceFolder}\\target\\release\\deps\\TEMP_FILE.${workspaceFolderBasename}.rcgu.o*",
-				"/Y"
-			],
+			"command": "clang -m64 ${file} ${workspaceFolder}\\analysis\\print.ll -o ${workspaceFolder}\\analysis\\analysis.exe ${workspaceFolder}\\target\\release\\deps\\TEMP_FILE.mt_prototype.rcgu.o $env:RUSTLIB\\libstd-49e3d1aefc00cc02.rlib $env:RUSTLIB\\libpanic_abort-23a83f9cb9b3433e.rlib $env:RUSTLIB\\librustc_demangle-99c77609a4536a8b.rlib $env:RUSTLIB\\libstd_detect-af9ffb3c6d3f8ec7.rlib $env:RUSTLIB\\libhashbrown-a6bfe0548f994b2d.rlib $env:RUSTLIB\\librustc_std_workspace_alloc-61f07eb10bc24cc3.rlib $env:RUSTLIB\\libunwind-2fb3f9083307133a.rlib $env:RUSTLIB\\libcfg_if-6892c9ede6f0d6e6.rlib $env:RUSTLIB\\liblibc-788771c7bce73875.rlib $env:RUSTLIB\\liballoc-8a4c192e8601db8f.rlib $env:RUSTLIB\\librustc_std_workspace_core-4bf403d115b018c3.rlib $env:RUSTLIB\\libcore-48aa4c2213e4ac50.rlib $env:RUSTLIB\\libcompiler_builtins-34df001b737926cd.rlib -lws2_32 -luserenv -lntdll",
 			"dependsOn": [
-				"remove unused temp files"
+				"prepare temp files"
 			],
 			"dependsOrder": "sequence",
-			"problemMatcher": [],
+			"group": "build",
 			"hide": true
+		},
+		{
+			"label": "clang: analysis",
+			"type": "shell",
+			"command": "${workspaceFolder}\\analysis\\analysis.exe",
+			"group": "build",
+			"dependsOn": "clang: build analysis",
+			"dependsOrder": "sequence"
 		},
 		{
 			"label": "clang: build",
 			"type": "shell",
 			"command": "clang -m64 .\\out\\mt_prototype.ll -o .\\out\\mt_prototype-clang.exe .\\target\\release\\deps\\TEMP_FILE.mt_prototype.rcgu.o $env:RUSTLIB\\libstd-49e3d1aefc00cc02.rlib $env:RUSTLIB\\libpanic_abort-23a83f9cb9b3433e.rlib $env:RUSTLIB\\librustc_demangle-99c77609a4536a8b.rlib $env:RUSTLIB\\libstd_detect-af9ffb3c6d3f8ec7.rlib $env:RUSTLIB\\libhashbrown-a6bfe0548f994b2d.rlib $env:RUSTLIB\\librustc_std_workspace_alloc-61f07eb10bc24cc3.rlib $env:RUSTLIB\\libunwind-2fb3f9083307133a.rlib $env:RUSTLIB\\libcfg_if-6892c9ede6f0d6e6.rlib $env:RUSTLIB\\liblibc-788771c7bce73875.rlib $env:RUSTLIB\\liballoc-8a4c192e8601db8f.rlib $env:RUSTLIB\\librustc_std_workspace_core-4bf403d115b018c3.rlib $env:RUSTLIB\\libcore-48aa4c2213e4ac50.rlib $env:RUSTLIB\\libcompiler_builtins-34df001b737926cd.rlib -lws2_32 -luserenv -lntdll",
 			"dependsOn": [
-				"rename temp file"
+				"prepare temp files"
 			],
 			"dependsOrder": "sequence",
 			"group": "build"
@@ -188,6 +187,12 @@
 				"create cfg-dot files",
 			],
 			"dependsOrder": "sequence"
+		},
+		{
+			"label": "build print.ll",
+			"type": "shell",
+			"command": "clang ${workspaceFolder}\\clang\\print.ll -o ${workspaceFolder}\\clang\\print.exe;${workspaceFolder}\\clang\\print.exe",
+			"group": "build"
 		}
 	]
 }
